k8s/index-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressrule
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - 34.140.97.51.nip.io
      secretName: miniapi-production-certificate
  rules:
    - host: 34.140.97.51.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: index-web-service
                port:
                  number: 80
